fix: 채팅 파일 업로드